<resources>
    <string name="accept_terms">Acepto términos y condiciones</string>
    <string name="attach_file">Adjuntar archivo</string>
    <string name="attach_file_optional">Adjuntar archivo (opcional)</string>
    <string name="back">Atrás</string>
    <string name="company_name">Nombre Compañía</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="create">Crear</string>
    <string name="description">Descripción</string>
    <string name="description_required">La descripción es requerida</string>
    <string name="document_id">Número de documento</string>
    <string name="document_type">Tipo de documento</string>
    <string name="email">Correo electrónico</string>
    <string name="error">Error</string>
    <string name="error_creating_incident">Ha ocurrido un error al crear el incidente. Por favor, inténtelo de nuevo.</string>
    <string name="existing_account">¿Ya tienes una cuenta? Iniciar sesión</string>
    <string name="file_not_supported">Formato de archivo no soportado. Formatos permitidos: jpg, png, gif, pdf, doc, docx, txt</string>
    <string name="file_too_large">El archivo excede el límite de 10 MB</string>
    <string name="first_name">Nombre</string>
    <string name="high">Alto</string>
    <string name="in_progress">En Progreso</string>
    <string name="incident_create_title">Crear Incidente</string>
    <string name="incident_success_message">El incidente se ha creado exitosamente.</string>
    <string name="incients_title">Incidentes</string>
    <string name="last_name">Apellido</string>
    <string name="low">Bajo</string>
    <string name="medium">Medio</string>
    <string name="no_incidents_found">No se encontraron incidentes</string>
    <string name="no_inicidents_registered">No tienes incidentes registrados</string>
    <string name="ok">OK</string>
    <string name="open">Abierto</string>
    <string name="password">Contraseña</string>
    <string name="resolved">Resuelto</string>
    <string name="search">Buscador</string>
    <string name="sign_up">Registrarse</string>
    <string name="success">Éxito</string>
    <string name="try_again">Reintentar</string>
    <string name="user_sign_up">Registro de Usuario</string>
    <string name="escalated">Escalado</string>
    <string name="app_name">ABCalls</string>
    <string name="log_in">Inicio de Sesión</string>
    <string name="need_account">¿No tienes una cuenta?</string>
    <string name="sign_up_action">Regístrate</string>
</resources>